--- a/index.html
+++ b/index.html
@@ -1,12 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My 2nd Assignment</title>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
+        integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
-    
-    <h2>hello Assignment</h2>
+
+    <header id="menu">
+        <h2>Tech<span class="h-with">Wave</span></h2>
+        <nav>
+            <ul>
+                <li>About</li>
+                <li>Episodes</li>
+                <li>Host</li>
+            </ul>
+        </nav>
+        <button class="btn colorpro">Subscribe</button>
+    </header>
+
+    <section id="hero-section">
+        <div class="hero-bg">
+
+            <div class="circlepro">
+                <img src="images/hero-circle.png" alt="">
+                <div class="microphone">
+                    <img src="images/microphone.png" alt="">
+                </div>
+            </div>
+
+
+            <h2>TechWave</h2>
+            <div class="hero-btn">
+                <button class="colorpro">Listen on Spotify</button>
+                <button class="Subscribe">Subscribe</button>
+            </div>
+        </div>
+    </section>
+
 </body>
+
 </html>
