--- a/index.html
+++ b/index.html
@@ -33,18 +33,53 @@
 
             <div class="circlepro">
                 <img src="images/hero-circle.png" alt="">
-                <div class="microphone">
-                    <img src="images/microphone.png" alt="">
+                <div class="hero-circle">
+                    <img class="tit" src="images/microphone.png" alt="">
                 </div>
             </div>
 
 
             <h2>TechWave</h2>
+            <p>Your daily dose of tech insights, productivity hacks, and personal growth</p>
             <div class="hero-btn">
-                <button class="colorpro">Listen on Spotify</button>
-                <button class="Subscribe">Subscribe</button>
+                <button class="colorpro"><i class="fa-brands fa-spotify"></i> Listen on Spotify</button>
+                <button class="Subscribe"><i class="fa-solid fa-envelope"></i> Subscribe</button>
             </div>
         </div>
+    </section>
+
+
+    <section id="about">
+        <div>
+            <h2>About the Podcast</h2>
+            <p>TechWave is your go-to podcast for staying ahead in the fast-paced world of technology.
+                We break down complex topics into digestible insights, explore productivity strategies that actually
+                work,
+                and share stories of personal growth from industry leaders.
+                <br><br>
+                Join thousands of young professionals and tech enthusiasts who start their day with TechWave.</p>
+        </div>
+
+        <div class="earning">
+            <div>
+                <h2>150K+</h2>
+                <p>Monthly Listeners</p>
+            </div>
+            <div>
+                <h2>150K+</h2>
+                <p>Monthly Listeners</p>
+            </div>
+            <div>
+                <h2>150K+</h2>
+                <p>Monthly Listeners</p>
+            </div>
+            <div>
+                <h2>150K+</h2>
+                <p>Monthly Listeners</p>
+            </div>
+            
+        </div>
+        
     </section>
 
 </body>
