mobile responsive update

--- a/index.html
+++ b/index.html
@@ -18,19 +18,19 @@
 
     <header id="menu">
         <h2>Tech<span class="h-with">Wave</span></h2>
-        <nav>
+        <nav class="hiddan">
             <ul>
                 <li>About</li>
                 <li>Episodes</li>
                 <li>Host</li>
             </ul>
         </nav>
-        <button class="btn colorpro">Subscribe</button>
+        <button class="btn colorpro hiddan">Subscribe</button>
+        <i class="fa-solid fa-bars"></i>
     </header>
 
     <section id="hero-section">
-        <div class="hero-bg">
-
+        <!-- <div class="hero-bg"> -->
             <div class="circlepro">
                 <img src="images/hero-circle.png" alt="">
                 <div class="hero-circle">
@@ -45,7 +45,7 @@
                 <button class="colorpro"><i class="fa-brands fa-spotify"></i> Listen on Spotify</button>
                 <button class="Subscribe"><i class="fa-solid fa-envelope"></i> Subscribe</button>
             </div>
-        </div>
+        <!-- </div> -->
     </section>
 
     <section id="about">
