--- a/index.html
+++ b/index.html
@@ -153,12 +153,11 @@
                         allowfullscreen></iframe>
 
                     <div class="v-box">
-                        <h2>The Future of AI in Everyday Life</h2>
+                        <h2>Building Better Habits for Remote Work</h2>
                         <p>
-                            Exploring how artificial intelligence is transforming our daily routines and what to expect
-                            in the next decade.
+                            Practical strategies for staying productive and maintaining work-life balance in a remote environment.
                         </p>
-                        <h5><i class="fa-solid fa-clock"></i> 42 min</h5>
+                        <h5><i class="fa-solid fa-clock"></i> 31 min</h5>
                     </div>
 
                 </div>
@@ -170,12 +169,11 @@
                         allowfullscreen></iframe>
 
                     <div class="v-box">
-                        <h2>The Future of AI in Everyday Life</h2>
+                        <h2>Career Growth in Tech: A Roadmap</h2>
                         <p>
-                            Exploring how artificial intelligence is transforming our daily routines and what to expect
-                            in the next decade.
+                            Expert advice on navigating your tech career from junior developer to senior leadership roles.
                         </p>
-                        <h5><i class="fa-solid fa-clock"></i> 42 min</h5>
+                        <h5><i class="fa-solid fa-clock"></i> 51 min</h5>
                     </div>
 
                 </div>
