--- a/index.html
+++ b/index.html
@@ -32,12 +32,14 @@
     <main>
 
         <section id="hero-section">
-            <!-- <div class="hero-bg"> -->
+            <button class="beg">NEW</button>
             <div class="circlepro">
+                
                 <img src="images/hero-circle.png" alt="">
                 <div class="hero-circle">
                     <img class="tit" src="images/microphone.png" alt="">
                 </div>
+                
             </div>
 
 
